# ignore-gen

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  meson.build  meson_options.txt  projconfig.h.in
data/: ignore.db  ignore.db.hash
pkg/: copy.py  ignore-gen.spec
scripts/: download-data.py
src/: DbManager.cpp  DbManager.hpp  IgnoreEntry.cpp  IgnoreEntry.hpp  main.cpp
